--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-SSLGlue
-version:            0.2_1
+version:            0.3
 abstract:           ~
 author:  []
 license:            unknown
