Import of SULLR/Net-SSLGlue-0.6 from CPAN.
gitpan-cpan-distribution: Net-SSLGlue
gitpan-cpan-version:      0.6
gitpan-cpan-path:         SULLR/Net-SSLGlue-0.6.tar.gz
gitpan-cpan-author:       SULLR
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-SSLGlue
-version:            0.5
+version:            0.6
 abstract:           ~
 author:  []
 license:            unknown
@@ -15,7 +15,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.54
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
