--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,24 @@
---- #YAML:1.0
-name:               Net-SSLGlue
-version:            1.04
-abstract:           ~
-author:  []
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+---
+abstract: unknown
+author:
+  - unknown
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    IO::Socket::SSL:  1.19
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Net-SSLGlue
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  IO::Socket::SSL: 1.19
+resources:
+  repository: https://github.com/noxxi/p5-net-sslglue
+version: 1.051
